// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixtures > matches the migration report snapshot for basic-esm 1`] = `
"Migration Order:
1. src/utils/date.js
2. src/components/Button.js
3. src/utils/math.js
4. src/services/api.js
5. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for commonjs 1`] = `
"Migration Order:
1. src/text.js
2. src/message.js
3. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for cycle 1`] = `
"Migration Order:
1. src/a.js, src/b.js (cycle group, migrate together)
2. src/index.js

Circular Dependencies:
1. src/a.js, src/b.js"
`;

exports[`fixtures > matches the migration report snapshot for dynamic 1`] = `
"Migration Order:
1. src/literal-feature.js
2. src/index.js

Manual Review:
1. src/index.js - non-literal dynamic import: import(\`./\${name}.js\`)"
`;

exports[`fixtures > matches the migration report snapshot for path-alias 1`] = `
"Migration Order:
1. src/utils/math.js
2. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for re-exports 1`] = `
"Migration Order:
1. src/number.js
2. src/feature.js
3. src/label.js
4. src/barrel.js
5. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for typescript-leaves 1`] = `
"Migration Order:
1. src/utils/count.ts
2. src/utils/title.ts
3. src/summary.js
4. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for typescript-middle-js-leaf 1`] = `
"Migration Order:
1. src/punctuation.js
2. src/greeting.ts
3. src/index.js"
`;

exports[`fixtures > matches the migration report snapshot for typescript-only 1`] = `
"Migration Order:
1. src/types.ts
2. src/format.ts
3. src/report.ts
4. src/user.ts
5. src/index.ts"
`;

exports[`fixtures > matches the migration report snapshot for unresolved 1`] = `
"Migration Order:
1. src/existing.js
2. src/index.js"
`;
